--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
-    "elysia": "latest"
+    "@elysiajs/html": "^0.8.0",
+    "elysia": "latest",
+    "elysia-rate-limit": "^2.0.1"
   },
   "devDependencies": {
     "bun-types": "latest"
